# dbt-template-snappy

./: .gitignore  README.md  cookiecutter.json  dbt_project.yml  pyproject.toml
{{ cookiecutter.__project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  dbt_project.yml  justfile  pyproject.toml
